syntax = "proto3";

package api;

message Empty {}

message StatusResponse {
    string message = 1;
}
